전체 레이아웃 구성 - 03일 작업으로는 UC제작

--- a/wpf_Project/MainWindow.xaml
+++ b/wpf_Project/MainWindow.xaml
@@ -21,7 +21,7 @@
                 <RowDefinition Height="130"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-
+            <!--Menu-->
             <Border Grid.RowSpan="3" CornerRadius="25">
                 <Border.Background>
                     <LinearGradientBrush>
@@ -117,6 +117,75 @@
                     </Button>
                 </StackPanel>
             </Border>
+
+            <!--Search-->
+            <Border Grid.Column="1" Style="{StaticResource whiteBorder}" Margin="20,0,20,20">
+                <Grid>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                        <Border Width="50" Height="50" CornerRadius="10" Margin="5,0,20,0">
+                            <Border.Background>
+                                <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                                    <GradientStop Color="#FB7456" Offset="0"/>
+                                    <GradientStop Color="#FA5654" Offset="1"/>
+                                </LinearGradientBrush>
+                            </Border.Background>
+
+                            <Image Source="/Images/u4.png" Width="40" Height="40"/>
+                        </Border>
+                        <StackPanel VerticalAlignment="Center">
+                            <TextBlock Text="hello" Style="{StaticResource titleText}" FontSize="26" FontWeight="Bold"/>
+                            <TextBlock Text="Have a Nice Day" Foreground="#6C879A" Margin="0,3,0,0"/>
+                        </StackPanel>
+                    </StackPanel>
+                    <!--Search Textbox-->
+                    <Grid Width="300" HorizontalAlignment="Right">
+                        <TextBlock Margin="15,0" VerticalAlignment="Center" Foreground="#868686" IsHitTestVisible="False" Panel.ZIndex="1"
+                                   Text="Search here ..."
+                                   Visibility="{Binding ElementName= textBoxSearch, Path=Text.IsEmpty, Converter={StaticResource BoolToVisConverter}}"/>
+                        <TextBox Name="textBoxSearch" Style="{StaticResource searchTextbox}"/>
+                        <Icon:PackIconMaterial Kind="Magnify" Width="15" Height="15" Foreground="#FF6D46" HorizontalAlignment="Right" Margin="0,0,15,0" VerticalAlignment="Center"/>
+                    </Grid>
+
+                </Grid>
+            </Border>
+
+            <!--메인 컨텐츠-->
+            <!--Info Cards-->
+            <Grid Grid.Column="1" Grid.Row="1" Margin="10 0 10 0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                
+            </Grid>
+            <!--Main Chart-->
+            <Border Grid.Column="1" Grid.Row="2" Style="{StaticResource whiteBorder}" Margin="20 20 20 0">
+                <Grid Margin="10 5">
+                    <!--Title-->
+                    <TextBox Text="Sales Figures" Style="{StaticResource titleText}"/>
+
+                    <!--Chart-->
+                    
+                    <!--Note Text-->
+                    <Grid VerticalAlignment="Bottom" Margin="10 0">
+                        <Icon:PackIconMaterial Kind="Information" Foreground="#F96654"/>
+                        <TextBlock TextWrapping="Wrap" Margin="30 0 0 0" LineHeight="18" Foreground="{StaticResource GreyColor}"
+                        Text="Net Sales, Found on the income statement are used to calculate this ration Return and refunds must be backed out of total sales to measure the truly measure the firms assets ability to generate sales."/>
+                    </Grid>
+                </Grid>
+            </Border>
+            <!--Right Section-->
+            <Grid Grid.Column="2" Grid.RowSpan="3">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+
+                <!--Sales List-->
+
+                <!--Sales Report-->
+            </Grid>
         </Grid>
     </Border>
 </Window>
