--- a/wpf_Project/App.xaml
+++ b/wpf_Project/App.xaml
@@ -84,12 +84,13 @@
             <Setter Property="Foreground" Value="#a0a0a0"/>
             <Setter Property="BorderThickness" Value="0"/>
             <Setter Property="FontSize" Value="12"/>
+            <Setter Property="Padding" Value="15 13 40 13" />
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type TextBoxBase}">
                         <Border x:Name="border" CornerRadius="10" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" SnapsToDevicePixels="True">
-                            <ScrollViewer x:Name="PART_ContentHost" Focusable="fasle" HorizontalScrollBarVisibility="Hidden"/>
+                            <ScrollViewer x:Name="PART_ContentHost" Focusable="false" HorizontalScrollBarVisibility="Hidden"/>
                         </Border>
 
                         <ControlTemplate.Triggers>
