--- a/wpf_Project/MainWindow.xaml
+++ b/wpf_Project/MainWindow.xaml
@@ -163,7 +163,7 @@
             <Border Grid.Column="1" Grid.Row="2" Style="{StaticResource whiteBorder}" Margin="20 20 20 0">
                 <Grid Margin="10 5">
                     <!--Title-->
-                    <TextBox Text="Sales Figures" Style="{StaticResource titleText}"/>
+                    <TextBlock Text="Sales Figures" Style="{StaticResource titleText}"/>
 
                     <!--Chart-->
                     
