--- a/wpf_Project/MainWindow.xaml
+++ b/wpf_Project/MainWindow.xaml
@@ -1,8 +1,10 @@
 ﻿<Window x:Class="wpf_Project.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
+        xmlns:uc="clr-namespace:wpf_Project.UserControls"
         WindowStartupLocation="CenterScreen" Background="Transparent"
         WindowStyle="None" AllowsTransparency="True" Height="780" Width="1280">
     <Window.Resources>
@@ -157,7 +159,10 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                
+
+                <uc:InfoCard Grid.Column="0" Title="Sales" SubTitle="Compared To ($2464 Last Month)" Amount="3" Image="/Images/sale.png"/>
+                <uc:InfoCard Grid.Column="1" Title="Purchase" SubTitle ="Compared To ($1405 Last Month)" Amount="8" Image="/Images/purchase.png"/>
+                <uc:InfoCard Grid.Column="2" Title="Return" SubTitle="Compared To ($3100 Last Month)" Amount="5" Image="/Images/return.png"/>
             </Grid>
             <!--Main Chart-->
             <Border Grid.Column="1" Grid.Row="2" Style="{StaticResource whiteBorder}" Margin="20 20 20 0">
@@ -165,8 +170,54 @@
                     <!--Title-->
                     <TextBlock Text="Sales Figures" Style="{StaticResource titleText}"/>
 
-                    <!--Chart-->
+                    <!--Legends-->
+                    <uc:Legends HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0 8 10 0"/>
                     
+                    <!--Chart-->
+                    <lvc:CartesianChart Grid.Row="1" Margin="5 40 0 60" LegendLocation="None">
+                        <lvc:CartesianChart.DataTooltip>
+                            <lvc:DefaultTooltip Background="Red" Foreground="#ffffff" Opacity="0.7" BulletSize="10"/>
+                        </lvc:CartesianChart.DataTooltip>
+                        
+                        <lvc:CartesianChart.AxisX>
+                            <lvc:Axis Foreground="#90A3B2" ShowLabels="True">
+                                <lvc:Axis.Separator>
+                                    <lvc:Separator StrokeThickness="0" Step="2"/>
+                                </lvc:Axis.Separator>
+                            </lvc:Axis>
+                        </lvc:CartesianChart.AxisX>
+                        
+                        <lvc:CartesianChart.AxisY>
+                            <lvc:Axis MinValue="40" MaxValue="350" Foreground="#90A3B2" ShowLabels="True">
+                                <lvc:Axis.Separator>
+                                    <lvc:Separator StrokeThickness="0"/>
+                                </lvc:Axis.Separator>
+                            </lvc:Axis>
+                        </lvc:CartesianChart.AxisY>
+
+                        <lvc:CartesianChart.Series>
+                            <lvc:LineSeries Values="50,120,100,160,150,180,120,170,165,180" Fill="Transparent" StrokeThickness="3" PointGeometrySize="0">
+                                <lvc:LineSeries.Stroke>
+                                    <LinearGradientBrush>
+                                        <GradientStop Color="#ffffff" Offset="0.06"/>
+                                        <GradientStop Color="#2889FC" Offset="0.5"/>
+                                        <GradientStop Color="#ffffff" Offset="0.93"/>
+                                    </LinearGradientBrush>
+                                </lvc:LineSeries.Stroke>
+                            </lvc:LineSeries>
+
+                            <lvc:LineSeries Values="170,240,200,220,220,270,200,260,200,240" Fill="Transparent" StrokeThickness="3" PointGeometrySize="0">
+                                <lvc:LineSeries.Stroke>
+                                    <LinearGradientBrush>
+                                        <GradientStop Color="#ffffff" Offset="0.06"/>
+                                        <GradientStop Color="#FE6C47" Offset="0.5"/>
+                                        <GradientStop Color="#ffffff" Offset="0.9"/>
+                                    </LinearGradientBrush>
+                                </lvc:LineSeries.Stroke>
+                            </lvc:LineSeries>
+
+                        </lvc:CartesianChart.Series>
+                    </lvc:CartesianChart>
                     <!--Note Text-->
                     <Grid VerticalAlignment="Bottom" Margin="10 0">
                         <Icon:PackIconMaterial Kind="Information" Foreground="#F96654"/>
@@ -183,8 +234,71 @@
                 </Grid.RowDefinitions>
 
                 <!--Sales List-->
+                <Border Style="{StaticResource whiteBorder}">
+                    <StackPanel>
+                        <TextBlock Text="Sales List" Style="{StaticResource titleText}"/>
+                        <TextBlock Text="This is the sales data with the most revenue for this month" TextWrapping="Wrap" Margin="0 10 0 10" Style="{StaticResource secondaryText}"/>
+
+                        <uc:UserCard Title="Reza Asadi" IsActive="True" UpPrice="$1256" DownPrice="$337" Image="/Images/u1.png"/>
+                        <uc:UserCard Title="Firman Jabber" UpPrice="$1256" DownPrice="$337" Image="/Images/u3.png"/>
+                        <uc:UserCard Title="John Doe" UpPrice="$1256" DownPrice="$337" Image="/Images/u1.png"/>
+                    </StackPanel>
+                </Border>
 
                 <!--Sales Report-->
+                <Border Grid.Row="1" Style="{StaticResource whiteBorder}" Margin="0 20 0 0">
+                    <Grid>
+                        <!--Title-->
+                        <TextBlock Text="Sales Report" Style="{StaticResource titleText}"/>
+
+                        <!--Chart-->
+                        <lvc:CartesianChart Grid.Row="1" Margin="0 40 0 30" LegendLocation="None">
+                            <lvc:CartesianChart.DataTooltip>
+                                <lvc:DefaultTooltip Background="#0074FF" Opacity="0.8" Foreground="#ffffff"/>
+                            </lvc:CartesianChart.DataTooltip>
+
+                            <lvc:CartesianChart.AxisX>
+                                <lvc:Axis Foreground="#90A3B2" ShowLabels="True">
+                                    <lvc:Axis.Separator>
+                                        <lvc:Separator StrokeThickness="0" Step="1"/>
+                                    </lvc:Axis.Separator>
+                                </lvc:Axis>
+                            </lvc:CartesianChart.AxisX>
+
+                            <lvc:CartesianChart.AxisY>
+                                <lvc:Axis MinValue="0" MaxValue="8" Foreground="#90A3B2" ShowLabels="True">
+                                    <lvc:Axis.Separator>
+                                        <lvc:Separator StrokeThickness="0" Step="2"/>
+                                    </lvc:Axis.Separator>
+                                </lvc:Axis>
+                            </lvc:CartesianChart.AxisY>
+
+                            <lvc:CartesianChart.Series>
+                                <lvc:ColumnSeries Values="6.5,3,6,5" MaxColumnWidth="10">
+                                    <lvc:ColumnSeries.Fill>
+                                        <LinearGradientBrush>
+                                            <GradientStop Color="#2889FC" Offset="0"/>
+                                            <GradientStop Color="#ffffff" Offset="1"/>
+                                        </LinearGradientBrush>
+                                    </lvc:ColumnSeries.Fill>
+                                </lvc:ColumnSeries>
+
+                                <lvc:ColumnSeries Values="7.5,5,4,5.5" MaxColumnWidth="10">
+                                    <lvc:ColumnSeries.Fill>
+                                        <LinearGradientBrush>
+                                            <GradientStop Color="#FF6F4D" Offset="0"/>
+                                            <GradientStop Color="#ffffff" Offset="1"/>
+                                        </LinearGradientBrush>
+                                    </lvc:ColumnSeries.Fill>
+                                </lvc:ColumnSeries>
+                            </lvc:CartesianChart.Series>
+                        </lvc:CartesianChart>
+
+                        <!--Legends-->
+                        <uc:Legends HorizontalAlignment="Center" VerticalAlignment="Bottom" />
+
+                    </Grid>
+                </Border>
             </Grid>
         </Grid>
     </Border>
